@@ -6,6 +6,12 @@ defaults.bluealsa.device "00:00:00:00:00:00"
 # Default to A2DP connection because that is what
 # most people want to use - high quality audio.
 defaults.bluealsa.profile "a2dp"
+# By default do not change the volume or mute state
+# when a PCM is opened.
+defaults.bluealsa.volume "unchanged"
+# By default do not modify the software volume state
+# when a PCM is opened.
+defaults.bluealsa.softvol "unchanged"
 defaults.bluealsa.delay 0
 defaults.bluealsa.battery "yes"
 defaults.bluealsa.service "org.bluealsa"
@@ -32,7 +38,7 @@ ctl.bluealsa {
 }
 
 pcm.bluealsa {
-	@args [ DEV PROFILE DELAY SRV ]
+	@args [ DEV PROFILE VOL SOFTVOL DELAY SRV ]
 	@args.DEV {
 		type string
 		default {
@@ -45,6 +51,20 @@ pcm.bluealsa {
 		default {
 			@func refer
 			name defaults.bluealsa.profile
+		}
+	}
+	@args.VOL {
+		type string
+		default {
+			@func refer
+			name defaults.bluealsa.volume
+		}
+	}
+	@args.SOFTVOL {
+		type string
+		default {
+			@func refer
+			name defaults.bluealsa.softvol
 		}
 	}
 	@args.DELAY {
@@ -64,10 +84,12 @@ pcm.bluealsa {
 	type plug
 	slave.pcm {
 		type bluealsa
-		service $SRV
 		device $DEV
 		profile $PROFILE
+		volume $VOL
+		softvol $SOFTVOL
 		delay $DELAY
+		service $SRV
 	}
 	hint {
 		show {
